<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="23dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_alert"
                android:text="@string/sure"
                android:textSize="16dp"
                android:fontFamily="@font/titilliumweb_regular"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/no_button"
                android:text="@string/no"
                android:textSize="17dp"
                android:fontFamily="@font/titilliumweb_semibold"
                android:textColor="@color/white"
                android:layout_below="@+id/text_alert"
                android:background="@color/scan_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/yes_button"
                android:text="@string/yes"
                android:textSize="17dp"
                android:fontFamily="@font/titilliumweb_semibold"
                android:textColor="@color/white"
                android:layout_below="@+id/text_alert"
                android:layout_alignParentEnd="true"
                android:background="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>