<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5.7"
    android:foreground="@color/transparent"
    android:id="@+id/main_dashboard"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/person_image"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp">

            <ImageView
                android:src="@drawable/ic_profile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/profile_image" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:text="Welcome, Username"
            android:fontFamily="@font/titilliumweb_semibold"
            android:textSize="18dp"
            android:textColor="@color/gray_black"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="17dp"
            android:background="@drawable/todo_list_bg"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titilliumweb_regular"
                android:text="@string/todo_list"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/gray_black"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toTopOf="@+id/more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/todo_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/add"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="22.5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/green">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleY="0.7"
                    android:scaleX="0.7"
                    android:background="@drawable/ic_floating_add_btn"
                    android:contentDescription="@string/floating_add_btn" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/todo_list_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_more_todo_list"
                    android:contentDescription="@string/more_todo_list" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/dashboard_card_views"
            android:orientation="vertical">

            <TextView
                android:id="@+id/create"
                style="@style/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                style="@style/make_assign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_description"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="@+id/create"
                app:layout_constraintTop_toBottomOf="@+id/create" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="17dp"
            android:background="@drawable/dashboard_card_views"
            android:orientation="vertical">

            <TextView
                style="@style/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/classroom"/>

            <TextView
                style="@style/make_assign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/classroom_description"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="14dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/attendance"
            android:layout_width="0dp"
            android:layout_marginEnd="5dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@drawable/todo_list_bg"
            android:elevation="1dp"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/textView"
                style="@style/attendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/attendance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/attendance"
                android:src="@drawable/ic_attendance_vector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/resource"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@drawable/todo_list_bg"
            android:elevation="1dp" >

            <TextView
                android:id="@+id/textView2"
                style="@style/attendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/resource"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/resource"
                android:src="@drawable/ic_resource_vector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@drawable/todo_list_bg"
            android:elevation="1dp" >

            <TextView
                android:id="@+id/textView3"
                style="@style/attendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/scan"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/scan"
                android:src="@drawable/ic_scan_vector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>
